# Kiro-Ception

./: .gitignore  LICENSE  POWER.md  PR_DESCRIPTION.md  README.md  TODO.md  config.default.toml  mcp.json  pyproject.toml
scripts/: run_mutmut.sh
src/kiro_ception/: cli.py  (+21 more)
tests/: test_background_indexer_live.py  test_cache.py  test_config.py  test_configurable_db_path.py  test_edge_cases.py  test_embeddings.py  test_engine_client.py  test_extract_assistant_responses.py  test_follower_registry_thread_safety.py  test_ide_loader.py  test_ide_loader_ordering.py  test_indexer.py  test_indexer_content_tiers.py  test_leader.py  test_leader_http.py  test_mcp_server_include_tool_context.py  test_migrations.py  test_models_and_config_extensions.py  test_pbt_tool_summaries.py  test_peers.py  test_prop12_include_meaningful_output.py  test_prop13_default_search_tier_filtering.py  test_prop14_context_window_interleaving.py  test_prop15_context_window_size_constraint.py  test_prop16_context_window_overflow_prioritization.py  test_prop17_message_ordering_within_execution.py  test_prop18_message_ordering_across_executions.py  test_prop19_reindexing_without_duplicates.py  test_prop1_prompt_extraction_fidelity.py  test_prop2_content_tier_classification.py  test_prop3_stub_replacement.py  test_prop4_fallback_to_session_file.py  test_prop5_summary_generation_coverage.py  test_prop8_summary_description_correctness.py  test_prop9_payload_exclusion.py  test_prop_error_inclusion.py  test_prop_meaningful_output_truncation.py  test_remaining_gaps.py  test_search_utils.py  test_session_loading.py  (+6 more)
(+25 files in other folders)
